-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.7.3
-
C7 + 92_201107_02 Subcon (020.036) + Split view SHA 985ab91a31c6577146b72d1cd0a69fb9c4ff9977
-
3c3176f43f049e0c26e56f04881bd8047e731915
Preconditions:
GraphicsView includes scroll bars and some text input widgets.
View is on portrait orientation.
Tested with pvkb-addressbook test application:
- select GWeb button and 'Mike's test'
Test steps:
1. Tap some text input field.
--> split view is opened.
2. Close the split view.
Expected result:
GraphicsView is correctly drawn as it was before opening the split view.
Actual result:
Background application is visible on view (on split view virtual keyboard area) after split view has been closed.
- relates to
-
QTBUG-16572 Support partial input mode
-
- Closed
-